# scikit-package

./: README.md  meson.build  meson.options  pyproject.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
include/: prefixsum.h
src/my_package/: __init__.py  _prefixsum.cpp  meson.build
src/skpackage/: __init__.py  meson.build
tests/: test_package.py  test_results.json
